Refactor and expand use case documentation
Updated the YAML changelog to clarify the scope of recent changes. In the .typ file, restructured and greatly expanded the use case section: replaced the previous list of use cases with detailed, structured descriptions for each use case, including actors, pre/post-conditions, scenarios, triggers, and error/alternative flows. Also updated terminology for user roles to improve clarity and consistency.

--- a/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
+++ b/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
@@ -7,7 +7,7 @@ changelog:
       - Alessandro Contarini
     verifier: TBD
     description: >
-        Modifica Utenti Sistema e Attori, aggiornamento UC, inserimento requisiti
+        Modifica Utenti Sistema e Attori, inizio stesura UC
   - version: "0.0.1"
     date: "2025-11-27"
     authors:
