--- a/docs/12-rtb/verbest/verbest_2025-11-28/verbest_2025-11-28.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2025-11-28/verbest_2025-11-28.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2025-12-02"
     authors:
       - Francesco Marcon
-    verifier: TBD
+    verifier: Valerio Solito
     description: >
       Versione stabile
   - version: "1.0.0"
