Updated verifier name in meta.yaml

--- a/docs/12-rtb/verbest/verbest_2025-12-03/verbest_2025-12-03.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2025-12-03/verbest_2025-12-03.meta.yaml
@@ -4,6 +4,6 @@ changelog:
     date: "2025-12-03"
     authors:
       - Alessandro Mazzariol
-    verifier: TBD
+    verifier: Valerio Solito
     description: >
       Prima bozza del verbale 
