--- a/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
+++ b/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
@@ -1,7 +1,14 @@
 title: Analisi dei Requisiti
 changelog:
+  - version: "0.2.0"
+    date: "2025-12-04"
+    authors:
+      - Leonardo Preo
+    verifier: TBD
+    description: >
+        Modifica struttura: gestione UC su multi-file
   - version: "0.1.0"
-    date: "2025-11-28"
+    date: "2025-12-03"
     authors:
       - Leonardo Preo
     verifier: TBD
