--- a/docs/12-rtb/verbest/verbest_2025-12-03/verbest_2025-12-03.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2025-12-03/verbest_2025-12-03.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2025-12-09"
     authors:
       - Alessandro Mazzariol
-    verifier: TBD
+    verifier: Valerio Solito
     description: >
       Prima versione stabile
 
