analisi_requisiti-v0.2.0 - verifica

--- a/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
+++ b/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2025-12-07"
     authors:
       - Leonardo Preo
-    verifier: TBD
+    verifier: Matteo Mantoan
     description: >
         Resi UC indipendenti da UI
   - version: "0.1.0"
