--- a/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
+++ b/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
@@ -1,5 +1,12 @@
 title: Piano di Qualifica 
 changelog:
+  - version: "0.1.0"
+    date: "2025-12-11"
+    authors:
+      - Francesco Marcon
+    verifier: TBD
+    description: >
+      Metriche processi primari
   - version: "0.0.1"
     date: "2025-12-05"
     authors:
