doc-piano_qualifica-v0.1.0 - Aggiunto Valerio come autore

--- a/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
+++ b/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
@@ -4,6 +4,7 @@ changelog:
     date: "2025-12-11"
     authors:
       - Francesco Marcon
+      - Valerio Solito
     verifier: TBD
     description: >
       Metriche processi primari
