doc-verbint_2025-11-07-v1.0.0 - Ultime modifiche

--- a/docs/12-rtb/verbint/verbint_2025-11-07/verbint_2025-11-07.meta.yaml
+++ b/docs/12-rtb/verbint/verbint_2025-11-07/verbint_2025-11-07.meta.yaml
@@ -6,6 +6,7 @@ changelog:
     date: "2025-12-11"
     authors:
       - Mario De Pasquale
+      - Francesco Marcon
     verifier: TBD
     description: >
       Modifiche minori per l'indentazione del punto 2.1 e 2.4
