--- a/docs/12-rtb/verbest/verbest_2025-12-10/verbest_2025-12-10.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2025-12-10/verbest_2025-12-10.meta.yaml
@@ -1,5 +1,13 @@
 title: Verbale Esterno 2025-12-10 (M31)
 changelog:
+  - version: "0.2.0"
+    date: "2025-12-12"
+    authors:
+      - Alessandro Mazzariol
+    verifier: TBD
+    description: >
+      Aggiunti punti 2.4 e 2.5 ed effettuate correzioni varie
+
   - version: "0.1.0"
     date: "2025-12-11"
     authors:
@@ -14,4 +22,4 @@ changelog:
       - Alessandro Mazzariol
     verifier: Francesco Marcon
     description: >
-      Prima bozza del verbale 
+      Prima bozza del verbale
