--- a/docs/12-rtb/verbint/verbint_2025-12-12/verbint_2025-12-12.meta.yaml
+++ b/docs/12-rtb/verbint/verbint_2025-12-12/verbint_2025-12-12.meta.yaml
@@ -1,5 +1,13 @@
 title: Verbale Interno 2025-12-12
 changelog:
+  - version: "0.0.2"
+    date: "2025-12-12"
+    authors:
+      - Alessandro Mazzariol
+    verifier: TBD
+    description: >
+      Aggiustamenti vari
+
   - version: "0.0.1"
     date: "2025-12-12"
     authors:
