--- a/docs/12-rtb/verbint/verbint_2025-12-12/verbint_2025-12-12.meta.yaml
+++ b/docs/12-rtb/verbint/verbint_2025-12-12/verbint_2025-12-12.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2025-12-12"
     authors:
       - Alessandro Mazzariol
-    verifier: TBD
+    verifier: Valerio Solito
     description: >
       Aggiustamenti vari
 
@@ -12,6 +12,6 @@ changelog:
     date: "2025-12-12"
     authors:
       - Alessandro Mazzariol
-    verifier: TBD
+    verifier: Valerio Solito
     description: >
       Prima stesura bozza verbale
