doc-piano_qualifica-v0.2.0 - Correzione typo nel changelog della versione precedente

--- a/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
+++ b/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
@@ -7,7 +7,7 @@ changelog:
       - Valerio Solito
     verifier: Matteo Mantoan
     description: >
-      Metriche processi primari
+      Metriche qualità di processo
   - version: "0.0.1"
     date: "2025-12-05"
     authors:
