--- a/docs/12-rtb/docest/piano_progetto/piano_progetto.meta.yaml
+++ b/docs/12-rtb/docest/piano_progetto/piano_progetto.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2025-12-12"
     authors:
       - Alessandro Mazzariol
-    verifier: TBD
+    verifier: Valerio Solito
     description: >
         Aggiunti sezione Glossario e riferimenti normativi/informativi
 
