--- a/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
+++ b/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2025-12-12"
     authors:
       - Francesco Marcon
-    verifier: TBD
+    verifier: Valerio Solito
     description: >
       Metriche qualità di prodotto
   - version: "0.1.0"
