Update verifier name in meta.yaml

--- a/docs/12-rtb/verbest/verbest_2025-12-10/verbest_2025-12-10.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2025-12-10/verbest_2025-12-10.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2025-12-13"
     authors:
       - Alessandro Mazzariol
-    verifier: TBD
+    verifier: Francesco Marcon
     description: >
       Aggiunta sottosezione Decisioni e aggiustamenti di sottoparagrafi
 
