doc-verbest_2025-12-10 v0.1.0 NT-125 (#81)
* doc-verbest_2025-12-10 v0.1.0 NT-125

* doc-verbest_2025-12-10-v0.1.0 NT-125

* doc-verbest_2025-12-10 v0.2.0 NT-125

* doc-verbest_2025-12-10 v0.1.0 NT-125

* Update verifier name in meta.yaml

---------

Co-authored-by: marcon-effe <framar514@gmail.com>

--- a/docs/12-rtb/verbest/verbest_2025-12-10/verbest_2025-12-10.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2025-12-10/verbest_2025-12-10.meta.yaml
@@ -1,9 +1,17 @@
 title: Verbale Esterno 2025-12-10 (M31)
 changelog:
+  - version: "0.1.0"
+    date: "2025-12-13"
+    authors:
+      - Alessandro Mazzariol
+    verifier: Francesco Marcon
+    description: >
+      Aggiunta sottosezione Decisioni e aggiustamenti di sottoparagrafi
+
   - version: "0.0.1"
     date: "2025-12-10"
     authors:
       - Alessandro Mazzariol
     verifier: Francesco Marcon
     description: >
-      Prima bozza del verbale 
+      Prima bozza del verbale
