--- a/docs/12-rtb/docest/piano_progetto/piano_progetto.meta.yaml
+++ b/docs/12-rtb/docest/piano_progetto/piano_progetto.meta.yaml
@@ -1,5 +1,21 @@
 title: Piano di Progetto
 changelog:
+  - version: "0.2.0"
+    date: "2025-12-12"
+    authors:
+      - Alessandro Mazzariol
+    verifier: Valerio Solito
+    description: >
+        Modificata sezione riferimenti normativi e aggiunta mitigazione del rischio RT2
+
+  - version: "0.1.0"
+    date: "2025-12-12"
+    authors:
+      - Alessandro Mazzariol
+    verifier: Valerio Solito
+    description: >
+        Aggiunti sezione Glossario e riferimenti normativi/informativi
+
   - version: "0.0.2"
     date: "2025-12-03"
     authors:
