Doc piano qualifica - v0.2.0 (#86)
* doc-piano_qualifica-v0.2.0 - Correzione typo nel changelog della versione precedente

* doc-piano_qualifica-v0.2.0 - Minori cambiamenti rispetto ciò che era stato inserito nella versione precedente. Ho aggiuno le metriche legate alla qualità di prodotto. Va sicuramente ricontrollato, in quanto molte metriche sono nuove e devono essere confermate. I valori ottimali e accettabili sono da considerarsi provvisori.

* Updated verifier name in meta.yaml

* doc-piano_qualifica-v0.2.0 - Cambiamenti richiesti in fase di verifica sulla PR. Lasciato una risposta riguardo uno dei commenti.

---------

--- a/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
+++ b/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
@@ -1,5 +1,12 @@
 title: Piano di Qualifica 
 changelog:
+  - version: "0.2.0"
+    date: "2025-12-12"
+    authors:
+      - Francesco Marcon
+    verifier: Valerio Solito
+    description: >
+      Metriche qualità di prodotto
   - version: "0.1.0"
     date: "2025-12-12"
     authors:
@@ -7,7 +14,7 @@ changelog:
       - Valerio Solito
     verifier: Matteo Mantoan
     description: >
-      Metriche processi primari
+      Metriche qualità di processo
   - version: "0.0.1"
     date: "2025-12-05"
     authors:
