--- a/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
+++ b/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
@@ -1,5 +1,12 @@
 title: Piano di Qualifica 
 changelog:
+  - version: "0.3.0"
+    date: "2025-12-13"
+    authors:
+      - Francesco Marcon
+    verifier: TBD
+    description: >
+      Aggiornamento e aggiunta ulteriori MQ04, MQ08
   - version: "0.2.0"
     date: "2025-12-12"
     authors:
