--- a/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
+++ b/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
@@ -6,7 +6,7 @@ changelog:
       - Francesco Marcon
     verifier: TBD
     description: >
-      Aggiornamento e aggiunta ulteriori MQ04, MQ08
+      Aggiornamento e aggiunta MQ04, MQ08
   - version: "0.2.0"
     date: "2025-12-12"
     authors:
