Updated verifier name in meta.yaml

--- a/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
+++ b/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2025-12-13"
     authors:
       - Francesco Marcon
-    verifier: TBD
+    verifier: Valerio Solito
     description: >
       Aggiornamento e aggiunta MQ04, MQ08
   - version: "0.2.0"
