--- a/.github/actions/setup-docs-env/action.yml
+++ b/.github/actions/setup-docs-env/action.yml
@@ -13,7 +13,11 @@ runs:
       shell: bash
 
     - name: Install typstyle
-      run: cargo install typstyle --locked
+      run: |
+        curl -L -o typstyle https://github.com/typstyle-rs/typstyle/releases/download/v0.14.0/typstyle-x86_64-unknown-linux-musl
+        chmod +x typstyle
+        sudo mv typstyle /usr/local/bin/
+        typstyle --version
       shell: bash
 
     - name: Setup Python
