Updated verifier name in meta.yaml

--- a/docs/12-rtb/slides/ddb_2025-12-15/ddb_2025-12-15.meta.yaml
+++ b/docs/12-rtb/slides/ddb_2025-12-15/ddb_2025-12-15.meta.yaml
@@ -4,6 +4,6 @@ changelog:
     date: "2025-12-01"
     authors:
       - Alessandro Mazzariol
-    verifier: TBD
+    verifier: Valerio Solito
     description: >
       Creazione del diario di Bordo
