--- a/.github/workflows/pr-merge-ready.yml
+++ b/.github/workflows/pr-merge-ready.yml
@@ -7,7 +7,7 @@ permissions:
   contents: read
 
 jobs:
-  validate-and-build:
+  check-mergeability:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout PR branch
