--- a/docs/12-rtb/verbint/verbint_2025-12-15/verbint_2025-12-15.meta.yaml
+++ b/docs/12-rtb/verbint/verbint_2025-12-15/verbint_2025-12-15.meta.yaml
@@ -4,6 +4,6 @@ changelog:
     date: "2025-12-15"
     authors:
       - Francesco Marcon
-    verifier: TBD
+    verifier: Alessandro Mazzariol
     description: >
       Prima bozza verbale
