--- a/docs/12-rtb/verbint/verbint_2025-12-15/verbint_2025-12-15.meta.yaml
+++ b/docs/12-rtb/verbint/verbint_2025-12-15/verbint_2025-12-15.meta.yaml
@@ -1,5 +1,12 @@
 title: Verbale Interno 2025-12-15
 changelog:
+  - version: "0.1.0"
+    date: "2025-12-16"
+    authors:
+      - Francesco Marcon
+    verifier: TBD
+    description: >
+      Stesura in modo più formale dei contenuti delle bozze verificate
   - version: "0.0.1"
     date: "2025-12-15"
     authors:
