Change verifier and update description for version 1.0.0
Updated verifier and description for version 1.0.0.

--- a/docs/12-rtb/verbest/verbest_2025-12-10/verbest_2025-12-10.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2025-12-10/verbest_2025-12-10.meta.yaml
@@ -4,9 +4,9 @@ changelog:
     date: "2025-12-16"
     authors:
       - Alessandro Mazzariol
-    verifier: TBD
+    verifier: Francesco Marcon
     description: >
-      Prima versione stabile
+      Approvazione - Prima versione stabile
 
   - version: "0.1.0"
     date: "2025-12-13"
