doc-verbest_2025-12-10 v1.0.0 NT-198 (#93)
* doc-verbest_2025-12-10 v1.0.0 NT-198

* Change verifier and update description for version 1.0.0

Updated verifier and description for version 1.0.0.

---------

Co-authored-by: marcon-effe <framar514@gmail.com>
Co-authored-by: Matteo Mantoan <mantomat@users.noreply.github.com>

--- a/docs/12-rtb/verbest/verbest_2025-12-10/verbest_2025-12-10.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2025-12-10/verbest_2025-12-10.meta.yaml
@@ -1,5 +1,13 @@
 title: Verbale Esterno 2025-12-10 (M31)
 changelog:
+  - version: "1.0.0"
+    date: "2025-12-16"
+    authors:
+      - Alessandro Mazzariol
+    verifier: Francesco Marcon
+    description: >
+      Approvazione - Prima versione stabile
+
   - version: "0.1.0"
     date: "2025-12-13"
     authors:
