--- a/docs/12-rtb/verbest/verbest_2025-12-17/verbest_2025-12-17.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2025-12-17/verbest_2025-12-17.meta.yaml
@@ -4,6 +4,6 @@ changelog:
     date: "2025-12-17"
     authors:
       - Francesco Marcon
-    verifier: TBD
+    verifier: Alessandro Mazzariol
     description: >
       Prima bozza del verbale
