doc-verbint_2025-12-15-v0.1.0 - Cambiamento changelog ed eliminati commenti dove non serve aggiungere task

--- a/docs/12-rtb/verbint/verbint_2025-12-15/verbint_2025-12-15.meta.yaml
+++ b/docs/12-rtb/verbint/verbint_2025-12-15/verbint_2025-12-15.meta.yaml
@@ -6,7 +6,7 @@ changelog:
       - Francesco Marcon
     verifier: TBD
     description: >
-      Stesura in modo più formale dei contenuti delle bozze verificate
+      Stesura in modo più formale, aggiunta di task
   - version: "0.0.1"
     date: "2025-12-15"
     authors:
