doc-verbest_2025-12-17-v1.0.0 - Aggiuta della firma aziendale pr l'approvazione del documento.

--- a/docs/12-rtb/verbest/verbest_2025-12-17/verbest_2025-12-17.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2025-12-17/verbest_2025-12-17.meta.yaml
@@ -1,5 +1,12 @@
 title: Verbale Esterno 2025-12-17 (M31)
 changelog:
+  - version: "1.0.0"
+    date: "2025-12-19"
+    authors:
+      - Francesco Marcon
+    verifier: TBD
+    description: >
+      Modifiche minori ed approvazione aziendale
   - version: "0.0.1"
     date: "2025-12-17"
     authors:
