Update verifier name in meta.yaml

--- a/docs/12-rtb/verbest/verbest_2025-12-17/verbest_2025-12-17.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2025-12-17/verbest_2025-12-17.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2025-12-19"
     authors:
       - Francesco Marcon
-    verifier: TBD
+    verifier: Alessandro Mazzariol
     description: >
       Modifiche minori ed approvazione aziendale
   - version: "0.0.1"
