--- a/docs/12-rtb/docest/piano_progetto/piano_progetto.meta.yaml
+++ b/docs/12-rtb/docest/piano_progetto/piano_progetto.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2025-12-16"
     authors:
       - Alessandro Mazzariol
-    verifier: TBD
+    verifier: Alessandro Contarini
     description: >
         Aggiornata sezione Sprint 2 e aggiunta sezione Sprint 3
   - version: "0.2.0"
