--- a/docs/12-rtb/docest/piano_progetto/piano_progetto.meta.yaml
+++ b/docs/12-rtb/docest/piano_progetto/piano_progetto.meta.yaml
@@ -1,5 +1,12 @@
 title: Piano di Progetto
 changelog:
+  - version: "0.3.0"
+    date: "2025-12-16"
+    authors:
+      - Alessandro Mazzariol
+    verifier: Alessandro Contarini
+    description: >
+        Aggiornata sezione Sprint 2 e aggiunta sezione Sprint 3
   - version: "0.2.0"
     date: "2025-12-12"
     authors:
