--- a/docs/12-rtb/docest/glossario/glossario.meta.yaml
+++ b/docs/12-rtb/docest/glossario/glossario.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2025-12-22"
     authors:
       - Alessandro Mazzariol
-    verifier: TBD
+    verifier: Alessandro Contarini
     description: >
       Aggiunta Termini specifici dello sprint 2
   - version: "1.1.0"
