--- a/docs/12-rtb/docest/glossario/glossario.meta.yaml
+++ b/docs/12-rtb/docest/glossario/glossario.meta.yaml
@@ -1,5 +1,12 @@
 title: Glossario
 changelog:
+  - version: "1.2.0"
+    date: "2025-12-22"
+    authors:
+      - Alessandro Mazzariol
+    verifier: Alessandro Contarini
+    description: >
+      Aggiunta Termini specifici dello sprint 2
   - version: "1.1.0"
     date: "2025-11-22"
     authors:
@@ -36,4 +43,4 @@ changelog:
       - Matteo Mantoan
     verifier: Leonardo Preo
     description: >
-        Prima bozza, implemetazione di automatismi e primi termini
+        Prima bozza, implementazione di automatismi e primi termini
