--- a/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
+++ b/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
@@ -1,5 +1,12 @@
 title: Analisi dei Requisiti
 changelog:
+  - version: "0.3.0"
+    date: "2025-12-31"
+    authors:
+      - Matteo Mantoan
+    verifier: TBD
+    description: >
+      Test
   - version: "0.2.0"
     date: "2025-12-07"
     authors:
