--- a/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
+++ b/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
@@ -1,5 +1,26 @@
 title: Analisi dei Requisiti
 changelog:
+  - version: "0.13.0"
+    date: "2026-01-07"
+    authors:
+      - Francesco Marcon
+    verifier: TBD
+    description: >
+      Aggiunti UC da 58 a 60
+  - version: "0.12.0"
+    date: "2026-01-07"
+    authors:
+      - Francesco Marcon
+    verifier: TBD
+    description: >
+      Aggiunti UC da 54 a 57
+  - version: "0.11.0"
+    date: "2026-01-07"
+    authors:
+      - Francesco Marcon
+    verifier: TBD
+    description: >
+      Aggiunti UC da 50 a 53
   - version: "0.10.0"
     date: "2026-01-07"
     authors:
