--- a/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
+++ b/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
@@ -1,5 +1,19 @@
 title: Analisi dei Requisiti
 changelog:
+  - version: "0.18.0"
+    date: "2026-01-07"
+    authors:
+      - Francesco Marcon
+    verifier: TBD
+    description: >
+      Aggiunti UC da 95 a 100
+  - version: "0.17.0"
+    date: "2026-01-07"
+    authors:
+      - Francesco Marcon
+    verifier: TBD
+    description: >
+      Aggiunti UC da 88 a 94
   - version: "0.16.1"
     date: "2026-01-07"
     authors:
