--- a/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
+++ b/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
@@ -4,9 +4,9 @@ changelog:
     date: "2026-01-08"
     authors:
       - Valerio Solito
-    verifier: TDB
+    verifier: TBD
     description: >
-      Aggiunti requisiti dall'UC80 all'87 e aggiunti UML fino a UC20.
+      Aggiunti requisiti dall'UC80 all'87 e aggiunti UML fino a UC20
   - version: "0.21.0"
     date: "2026-01-07"
     authors:
