doc-adr-v0.25.0 - Correzione changelog non aggiunta al commit precedente

--- a/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
+++ b/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
@@ -1,9 +1,16 @@
 title: Analisi dei Requisiti
 changelog:
+  - version: "0.25.0"
+    date: "2026-01-08"
+    authors:
+      - Francesco Marcon
+    verifier: TBD
+    description: >
+      Aggiunta UCS da 21 a 23
   - version: "0.24.1"
     date: "2026-01-08"
     authors:
-      - Alessandro Mazzariol
+      - Francesco Marcon
     verifier: TBD
     description: >
       Correzione ordine e gerarchia UC
