--- a/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
+++ b/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
@@ -1,5 +1,12 @@
 title: Analisi dei Requisiti
 changelog:
+  - version: "0.29.2"
+    date: "2026-01-18"
+    authors:
+      - Alessandro Contarini
+    verifier: TBD
+    description: >
+      Fix da UC 1 a 30 (versione testuale)
   - version: "0.29.1"
     date: "2026-01-17"
     authors:
