Update verifier name in verbint meta file

--- a/docs/12-rtb/verbint/verbint_2026-01-06/verbint_2026-01-06.meta.yaml
+++ b/docs/12-rtb/verbint/verbint_2026-01-06/verbint_2026-01-06.meta.yaml
@@ -4,6 +4,6 @@ changelog:
     date: "2026-01-15"
     authors:
       - Leonardo Preo
-    verifier: TBD
+    verifier: Alessandro Mazzariol
     description: >
       Prima stesura verbale
