Update verifier name in meta.yaml

--- a/docs/12-rtb/slides/ddb_2026-01-08/ddb_2026-01-08.meta.yaml
+++ b/docs/12-rtb/slides/ddb_2026-01-08/ddb_2026-01-08.meta.yaml
@@ -4,6 +4,6 @@ changelog:
     date: "2026-01-07"
     authors:
       - Leonardo Preo
-    verifier: TBD
+    verifier: Alessandro Mazzariol
     description: >
       Creazione del diario di Bordo
