Update verifier name in norme_progetto.meta.yaml

--- a/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
+++ b/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2026-01-12"
     authors:
       - Matteo Mantoan
-    verifier: TBD
+    verifier: Alessandro Mazzariol
     description: >
       Cambiamento alla struttura del documento, espansione sezione Documentazione
   - version: "0.5.0"
