docs(norme_progetto): cambiamento struttura documento, espansione sez… (#100)
* docs(norme_progetto): cambiamento struttura documento, espansione sezione documentazione

+ fix spellchecker

* ci: trigger check merge-ready con label

* Update verifier name in norme_progetto.meta.yaml

---------

Co-authored-by: Alessandro Mazzariol <107548899+Scafu@users.noreply.github.com>
Co-authored-by: Scafu <alessandro.mazzariol04@gmail.com>

--- a/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
+++ b/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
@@ -1,5 +1,12 @@
 title: Norme di Progetto
 changelog:
+  - version: "0.6.0"
+    date: "2026-01-12"
+    authors:
+      - Matteo Mantoan
+    verifier: Alessandro Mazzariol
+    description: >
+      Cambiamento alla struttura del documento, espansione sezione Documentazione
   - version: "0.5.0"
     date: "2025-11-21"
     authors:
